plugins {
    id 'org.springframework.boot' version '2.6.7'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

bootJar {
    enabled = true
    bootJarMainClassName {
        mainClass = 'com.bithumbsystems.lrc.api.LrcMngApiApplication'
    }
}

bootRun {
    bootRunMainClassName {
        mainClass = 'com.bithumbsystems.lrc.api.LrcMngApiApplication'
    }
}

ext.profile = (!project.hasProperty('profile') || !profile) ? 'local' : profile

allprojects {
    group = 'com.bithumbsystems'
    version = '0.0.1-SNAPSHOT'
    if ("${profile}".compareTo('prod') == 0){
        version = '0.0.1-RELEASE'
    }
    sourceCompatibility = '11'

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.795'
            mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.3.3"
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.apache.commons:commons-lang3:3.12.0'
        implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
    }
}

project(":api") {
    dependencies {
        implementation project(":persistence:mongodb")
    }
}
